Wayland fixes in GTK, redshift etc

--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -2,8 +2,8 @@
     border: none;
     border-radius: 0;
     /* `otf-font-awesome` is required to be installed for icons */
-    /* font-family: Roboto, Helvetica, Arial, sans-serif; */
-    font-size: 13px;
+    font-family: "Noto Sans", "Font Awesome 5 Free Solid";
+    /* font-size: 13px; */
     min-height: 0;
 }
 
